refactorings done with OpenRewrite