@@ -50,7 +50,7 @@ public class MultivaluedMapContextAdapter<K, V> implements Map<K, V> {
     public boolean containsValue(Object value) {
         // REFACTOR: Use sequenced collection method instead
         return adaptee.values().stream()
-                .map(l -> l.get(0))
+                .map(l -> l.getFirst())
                 .anyMatch(value::equals);
     }
 
@@ -92,7 +92,7 @@ public class MultivaluedMapContextAdapter<K, V> implements Map<K, V> {
     public Collection<V> values() {
         // REFACTOR: Use sequenced collection method instead
         return adaptee.values().stream()
-                .map(l -> l.get(0))
+                .map(l -> l.getFirst())
                 .collect(Collectors.toList());
     }
 
