@@ -368,7 +368,7 @@ public final class ModelServiceReader implements Serializable {
         List<? extends Element> group = UtilXml.childElementList(baseElement, "group");
         if (UtilValidate.isNotEmpty(group)) {
             // REFACTOR: Use sequenced collection method instead
-            Element groupElement = group.get(0);
+            Element groupElement = group.getFirst();
             groupElement.setAttribute("name", "_" + service.getName() + ".group");
             service.setInternalGroup(new GroupModel(groupElement));
             service.setInvoke(service.getInternalGroup().getGroupName());
@@ -695,7 +695,7 @@ public final class ModelServiceReader implements Serializable {
             param.setValidators(new LinkedList<>());
 
             // REFACTOR: Use sequenced collection method instead
-            Element validate = validateElements.get(0);
+            Element validate = validateElements.getFirst();
             String methodName = validate.getAttribute("method").intern();
             String className = validate.getAttribute("class").intern();
 
