@@ -42,7 +42,7 @@ public class SetRequestAttributeMethod implements TemplateMethodModelEx {
         if (args == null || args.size() != 2) {
             throw new TemplateModelException("Invalid number of arguements");
         }
-        if (!(args.get(0) instanceof TemplateScalarModel)) {
+        if (!(args.getFirst() instanceof TemplateScalarModel)) {
             throw new TemplateModelException("First argument not an instance of TemplateScalarModel");
         }
         if (!(args.get(1) instanceof BeanModel) && !(args.get(1) instanceof TemplateNumberModel) && !(args.get(1) instanceof TemplateScalarModel)) {
@@ -53,7 +53,7 @@ public class SetRequestAttributeMethod implements TemplateMethodModelEx {
         BeanModel req = (BeanModel) env.getVariable("request");
         HttpServletRequest request = (HttpServletRequest) req.getWrappedObject();
 
-        String name = ((TemplateScalarModel) args.get(0)).getAsString();
+        String name = ((TemplateScalarModel) args.getFirst()).getAsString();
         Object value = null;
         if (args.get(1) instanceof TemplateScalarModel) {
             value = ((TemplateScalarModel) args.get(1)).getAsString();
